fix text location in daos search input on Safari

--- a/src/components/Daos/Daos.scss
+++ b/src/components/Daos/Daos.scss
@@ -31,7 +31,6 @@
         border: 1px solid;
         text-indent: 30px;
         height: 30px;
-        line-height: 60px;
         background: url("../../assets/images/Icon/search.svg") $white no-repeat left 5px center;
         background-size: 20px;
         font-family: "AccordBold", sans-serif;
